objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Calculated_GHG_Formula__c</fullName>
        <formula>IF( 
	Calculated_GHG__c &gt; 0.8, 
	IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, Calculated_GHG__c * 100) &amp; 
		IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 100 - (Calculated_GHG__c * 100)
	), 
	IF(
		Calculated_GHG__c &gt; 0.5, 
		IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15, Calculated_GHG__c * 100) &amp; 
			IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 100 - (Calculated_GHG__c * 100 )
		), 
		IF(
			Calculated_GHG__c &gt; 0, 
			IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, Calculated_GHG__c * 100) &amp; 
				IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 100 - (Calculated_GHG__c * 100)
			), 
			&quot;&quot;
		)
))</formula>
        <label>Calculated GHG %</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_GHG__c</fullName>
        <label>Calculated GHG %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculated_Waste_Formula__c</fullName>
        <formula>IF( 
	Calculated_Waste__c &gt; 0.8, 
	IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, Calculated_Waste__c * 100) &amp; 
		IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 100 - (Calculated_Waste__c * 100)
	), 
	IF(
		Calculated_Waste__c &gt; 0.5, 
		IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15, Calculated_Waste__c * 100) &amp; 
			IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 100 - (Calculated_Waste__c * 100 )
		), 
		IF(
			Calculated_Waste__c &gt; 0, 
			IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, Calculated_Waste__c * 100) &amp; 
				IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 100 - (Calculated_Waste__c * 100)
			), 
			&quot;&quot;
		)
))</formula>
        <label>Calculated Waste %</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Waste__c</fullName>
        <label>Calculated Waste %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculated_Water_Formula__c</fullName>
        <formula>IF( 
	Calculated_Water__c &gt; 0.8, 
	IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, Calculated_Water__c * 100) &amp; 
		IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 100 - (Calculated_Water__c * 100)
	), 
	IF(
		Calculated_Water__c &gt; 0.5, 
		IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15, Calculated_Water__c * 100) &amp; 
			IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 100 - (Calculated_Water__c * 100 )
		), 
		IF(
			Calculated_Water__c &gt; 0, 
			IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, Calculated_Water__c * 100) &amp; 
				IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 100 - (Calculated_Water__c * 100)
			), 
			&quot;&quot;
		)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Water %</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Water__c</fullName>
        <label>Calculated Water %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homecare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refreshment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <label>Countries</label>
        <picklist>
            <picklistValues>
                <fullName>Countries</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Id__c</fullName>
        <label>IPM Project Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launch_Year__c</fullName>
        <label>Launch Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
        <label>Project Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Launch Evaluation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <picklist>
            <picklistValues>
                <fullName>Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deodorants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dressings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ice Cream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savoury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spreads</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Members__c</fullName>
        <label>Team Members</label>
        <picklist>
            <picklistValues>
                <fullName>Robbi Whitner  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Johnny Lach  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanna Trump  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yevette Fraser  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domenica Myrick  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jay Friley  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yang Valtierra  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ardelia Schock  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lavonda Sabo  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shonna Herbert  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shavonda Winfrey  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alline Depaola  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deidra Mealy  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gisele Russi  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zena Dehner  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darlena Murrill  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angelique Beckel  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dyan Shotwell  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lilliana Ballas  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stephine Johnsrud  </fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>AllProjects</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Project_Stage__c</columns>
        <columns>Project_Owner__c</columns>
        <columns>Calculated_GHG_Formula__c</columns>
        <columns>Calculated_Waste_Formula__c</columns>
        <columns>Calculated_Water_Formula__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>Foods_Projects</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Personal Care</value>
        </filters>
        <label>Foods Projects</label>
    </listViews>
    <listViews>
        <fullName>Foods_Projects1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Personal Care,Refreshment</value>
        </filters>
        <label>Refreshment Projects</label>
    </listViews>
    <listViews>
        <fullName>Foods_Projects2</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>equals</operation>
            <value>Market Deployment</value>
        </filters>
        <label>Market Ready Projects</label>
    </listViews>
    <listViews>
        <fullName>Foods_Projects3</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>equals</operation>
            <value>Feasibility</value>
        </filters>
        <label>Feasibility Stage Projects</label>
    </listViews>
    <listViews>
        <fullName>Homecare_Projects</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Homecare</value>
        </filters>
        <label>Homecare Projects</label>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Projects</label>
    </listViews>
    <listViews>
        <fullName>Personal_Care_Projects</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Personal Care</value>
        </filters>
        <label>Personal Care Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Simplified</fullName>
        <active>true</active>
        <description>Simplified version of the Eco-Design tool</description>
        <label>Simplified</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>